@@ -93,12 +93,8 @@ public final class POSTHyperlinkNote extends HyperlinkNote {
      */
     private static String encodeForJavascript(String str) {
         // https://developer.mozilla.org/en-US/docs/Glossary/Base64#the_unicode_problem
-        try {
-            String encode = URLEncoder.encode(str, StandardCharsets.UTF_8.name());
-            return Base64.getUrlEncoder().encodeToString(encode.getBytes(StandardCharsets.UTF_8));
-        } catch (UnsupportedEncodingException e) {
-            throw new InternalError("UTF-8 is missing but mandated by the JVM specification", e);
-        }
+        String encode = URLEncoder.encode(str, StandardCharsets.UTF_8);
+        return Base64.getUrlEncoder().encodeToString(encode.getBytes(StandardCharsets.UTF_8));
     }
 
     // TODO why does there need to be a descriptor at all?
